- Merged ICCB-L version 1.9.2 into trunk: 	- merge -r3784:3785 http://forge.abcd.harvard.edu/svn/screensaver/branches/iccbl/1.9.2-dev 	- merge -r3791:HEAD http://forge.abcd.harvard.edu/svn/screensaver/branches/iccbl/1.9.2-dev - The dual merge operations were necessary, since some intermediate revisions of 1.9.1-dev were already merged into 1.9.2-dev
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@3924 80c535d0-b110-0410-b4de-9279f94142c3